fix all the outerLayout bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
-
 @import "tailwindcss";
 
 @custom-variant dark (&:is(.dark *));
 
 * {
   scroll-behavior: smooth;
-  font-family: "Geist";
 }
 
 :root {
